Responsive Web Design/Personal Portfolio Site/style.css
body {
  background-color: black;
  font-family: sans-serif;
}

#navbar {
  box-sizing: border-box;
  position:fixed;
  top:0;
  left:0;
  width: 100%;
  padding:20px 40px 20px 40px;
  display:flex;
  align-items:center;
  justify-content: space-between;
  background-color: white;
  border-bottom: 2px solid black;
}

#link-box {
  display:flex;
  column-gap:20px;
}

main {
  max-width:1000px;
  margin:auto;
  padding: 40px;
  padding-top:100px;
  background-color: white;
}

#welcome-section {
  height:100vh;
  display:flex;
  column-gap:20px;
}

.top-pic {
  width: 100%;
  border-radius: 20px;
}

@media only screen and (max-width:750px) {
  #welcome-section {
    flex-direction:column;
    row-gap:20px;
    height: 100%;
  }
}

.introshowcase {
  flex:1 1 0;
  padding:20px 40px 20px 40px;
  border-radius: 20px;
}

#writing-intro{
  font-family: 'Noto Serif', serif;
  background-color:#fffceb;
  border: solid 2px black;
}

#technical-intro {
  font-family: 'Inconsolata', monospace;
  font-size: 17px;
  background-color:black;
  color:#16f22a;
  border: solid 2px #16f22a;
}
#technical-intro h1 {
  font-size: 30px;
}

#projects {
  padding:20px 40px 20px 40px;
  display:grid;
  grid-template-columns: repeat(auto-fill, 300px);
  grid-auto-rows: auto;
  column-gap: 20px;
  row-gap:20px;
  justify-content: center;
  align-items: center;
  transition: 0.2s;
}

@media only screen and (max-width: 500px) {
  #projects {
    display:flex;
    flex-direction:column;
  }
}

.project-tile {
  grid-area: auto;
  box-sizing: border-box;
  width:100%;
  min-height:150px;
  padding:20px 40px 20px 40px;
  border: solid 2px black;
  border-radius: 20px;
  display:flex;
  flex-direction:column;
  justify-content: center;
  align-items: center;
  background-color:white;
  transition: 0.2s;
}

.project-tile:hover { 
  border: solid 5px blue;
  cursor:pointer;
}

.project-tile img{
  max-width:100%;
  max-height:90px;
}


.tile-title {
  text-align: center;
}

.tile-text {
  display: none;
}

#profiles {
  display:flex;
  align-items:center;
  column-gap:20px;
}

